@@ -1,0 +1,6 @@
+package org.apache.cassandra.db.columniterator;
+
+public interface IColumnIteratorFactory
+{
+    IColumnIterator create();
+}
